--- a/cmd/tools/smoketest/env.INI
+++ b/cmd/tools/smoketest/env.INI
@@ -1,13 +1,13 @@
-# photon smoke test envInit
+# atmosphere smoke test envInit
 
 [PHOTON_PARAMS]
-datadir: .photon
+datadir: .atmosphere
 keystore_path: ../../../testdata/keystore
 password_file: ../../../testdata/keystore/pass
 eth_rpc_endpoint: ws://182.254.155.208:30306
 debug: true
-photonpath: photon
-registry_contract_address: 0x2a27e10acC08928D6Dce7a42F073606151264AAe
+atmosphere_path: atmosphere
+token_network_address: 0x2934959136e335521ac43585d4De9Bb32A4c4337
 
 [ACCOUNT]
 N0: 0x1a9eC3b0b807464e6D3398a59d6b0a369Bf422fA
